// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Avatar Anonymous With Default Fallback Icon 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-99 MuiAvatar-circle MuiAvatar-colorDefault"
>
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-outlined-social-person NatDSIcon-root-101 NatDSIcon-root-102"
  >
    outlined-social-person
  </i>
</div>
`;

exports[`Storyshots Components/Avatar Default Color 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-109 MuiAvatar-circle MuiAvatar-colorDefault"
>
  D
</div>
`;

exports[`Storyshots Components/Avatar Huge Size 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-119 MuiAvatar-circle"
>
  <img
    alt="Nat Natura holding a cat"
    className="MuiAvatar-img"
    src="https://pbs.twimg.com/profile_images/1308179129267781632/wLDnEiOy_400x400.jpg"
  />
</div>
`;

exports[`Storyshots Components/Avatar Image 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-97 MuiAvatar-circle"
>
  <img
    alt="Nat Natura holding a cat"
    className="MuiAvatar-img"
    src="https://pbs.twimg.com/profile_images/1308179129267781632/wLDnEiOy_400x400.jpg"
  />
</div>
`;

exports[`Storyshots Components/Avatar Large Size 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-117 MuiAvatar-circle"
>
  <img
    alt="Nat Natura holding a cat"
    className="MuiAvatar-img"
    src="https://pbs.twimg.com/profile_images/1308179129267781632/wLDnEiOy_400x400.jpg"
  />
</div>
`;

exports[`Storyshots Components/Avatar Letter 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-103 MuiAvatar-circle MuiAvatar-colorDefault"
>
  T
</div>
`;

exports[`Storyshots Components/Avatar Playground 1`] = `
<span
  className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
  style={
    Object {
      "height": "",
      "width": "",
    }
  }
/>
`;

exports[`Storyshots Components/Avatar Primary Color 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-105 MuiAvatar-circle MuiAvatar-colorDefault"
>
  P
</div>
`;

exports[`Storyshots Components/Avatar Secondary Color 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-107 MuiAvatar-circle MuiAvatar-colorDefault"
>
  S
</div>
`;

exports[`Storyshots Components/Avatar Small Size 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-113 MuiAvatar-circle"
>
  <img
    alt="Nat Natura holding a cat"
    className="MuiAvatar-img"
    src="https://pbs.twimg.com/profile_images/1308179129267781632/wLDnEiOy_400x400.jpg"
  />
</div>
`;

exports[`Storyshots Components/Avatar Standard Size 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-115 MuiAvatar-circle"
>
  <img
    alt="Nat Natura holding a cat"
    className="MuiAvatar-img"
    src="https://pbs.twimg.com/profile_images/1308179129267781632/wLDnEiOy_400x400.jpg"
  />
</div>
`;

exports[`Storyshots Components/Avatar Tiny Size 1`] = `
<div
  className="MuiAvatar-root NatDsAvatar-root-111 MuiAvatar-circle"
>
  <img
    alt="Nat Natura holding a cat"
    className="MuiAvatar-img"
    src="https://pbs.twimg.com/profile_images/1308179129267781632/wLDnEiOy_400x400.jpg"
  />
</div>
`;
